--- a/1-discover-travels/frontend/src/shared/Navbar.module.css
+++ b/1-discover-travels/frontend/src/shared/Navbar.module.css
@@ -1,5 +1,5 @@
 .nav {
-    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)),  url('../images/background.jpg');
+    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)),  url('../../images/background.jpg');
     background-size: cover ;
     background-attachment: fixed;
     padding: 20px 60px;
